wellesleynet/roles/k8s/files/monica.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: monica
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monica
  serviceName: "monica"
  template:
    metadata:
      labels:
        app: monica
    spec:
      containers:
      - image: monica:2.20.0-apache
        imagePullPolicy: Always
        name: monica
        ports:
        - containerPort: 80
        volumeMounts:
        - name: monica
          mountPath: /var/www/html/storage
          subPath: monica
      - image: mysql:5.7.33
        imagePullPolicy: Always
        name: monica-db
        volumeMounts:
        - name: monica
          mountPath: /var/lib/mysql
          subPath: mysql
      volumes:
      - name: monica
        persistentVolumeClaim:
          claimName: monica
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: monica
spec:
  selector:
    app: monica
  ports:
  - name: monica
    port: 80
    protocol: TCP
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monica
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/auth-url: "https://authelia.kiski.co/api/verify"
    nginx.ingress.kubernetes.io/auth-signin: "https://authelia.kiski.co"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  rules:
  - host: monica.kiski.co
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: monica
            port:
              number: 80
  tls:
  - hosts:
    - monica.kiski.co
    secretName: monica-kiski-co-tls
